# Evariste

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Setup.Coq.md  Setup.HOL-Light.md  Setup.Metamath.md  makefile_coq
Readmes/: proof_cleaning_debugging.md  synthetic_gen.md
docs/: conf.py  index.rst  requirements.txt
docs/experiments/: index.rst  launch_experiments.rst
docs/formal/: adversarial.rst  async_workers.rst  distributed_mcts.rst  forward_prover.rst  index.rst
docs/get_started/: env_setup.rst  index.rst  sphinx.rst  sweeps.rst
docs/trainer/: index.rst
formal/: .gitignore  adversarial_train.py  binarize.py  launch_mcts.py  maxi_gen.py  mypy.ini  offline_iter.py  pytest.ini  requirements.txt  sample_theorems.py  simpler_run.py  sweep_eval.py  train.py
formal/configs/: adv_configs.py  bwd_configs.py  fwd_configs.py  mm_adv_configs.py  online_mcts_configs.py
formal/evariste/: json.py  logger.py  metrics.py  model_zoo.py  slurm.py  slurm_conf_factory.py  trie.py  utils.py
formal/lean_cluster/: client.py  instance.py  utils.py
formal/leanml/: __init__.py  comms.py  parse_goal.py
formal/lprp/: .gitignore  README.md  leanpkg.toml
formal/params/: __init__.py  check_reloading.py  migrate.py  params.py  test_params.py  test_params_optional.py  test_trainer_args.py
formal/runtime_loaded_lean_files/: README.md
formal/scripts/: load_mcts_min_proofs.py
formal/suggest/: __main__.py
lean_fork/: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  create_fwd_dataset.py  high_ram_repro.jsonl  high_ram_repro.py  launch_fifo.py  new_create_fwd_dataset.py  setup.py  test_lean_api.py  test_lean_api_async.py  test_parse_children.py  test_parse_goal.py  test_parse_goal_and_apply_tactic.py  test_print_cmd.py
lean_fork/src/: CMakeLists.txt  main.cpp  ml_server.cpp  ml_server.h
lean_imo_th/: imo_th.lean
proof_explore/: README.md  babel.config.js  package.json  vue.config.js
(+486 files in other folders)
